--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -201,7 +201,7 @@
                     <div class="d-flex justify-content-between accordion">
                         <p>
                             <i class="bi bi-geo"></i>
-                            Ações Corretivas
+                            Plano de Ação
                         </p>
                        
                     </div>
@@ -234,7 +234,7 @@
                     <div class="d-flex justify-content-between accordion">
                         <p>
                             <i class="bi bi-envelope"></i>
-                            Partes Interessadas
+                            Notificação por e-mail
                         </p>
                       
                     </div>
