--- a/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
@@ -68,7 +68,7 @@
                 </p-chip>
                 <div class="d-flex align-items-center flex-row">
                     <label class="">Porquê</label>
-                    <input class="ml-1 mr-1 why-input" type="text" [(ngModel)]="propService.step2.textAreas[5]">
+                    <input style="width:300px;" class="ml-1 mr-1" type="text" placeholder="Escreva o primeiro porquê" [(ngModel)]="propService.step2.textAreas[5]">
                     <label class="">?</label>
                 </div>
             </div>
