--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -190,7 +190,7 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="bi bi-geo"></i>
-                    Ações Corretivas
+                    Plano de Ação
                 </p>
                 <button class="btn btn-dark red" (click)="goToStepById(1)">
                     <i class="bi bi-pencil mr-1"></i>
@@ -226,7 +226,7 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="bi bi-envelope"></i>
-                    Partes Interessadas
+                    Notificação por e-mail
                 </p>
                 <button class="btn btn-dark red" (click)="goToStepById(3)">
                     <i class="bi bi-pencil mr-1"></i>
