--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -1,5 +1,7 @@
 <form [formGroup]="nonComplicanceService.formIdentificacaoNC">
   <div class="cabecalho">
+    <p>Os campos marcados com asterisco (*) são de preenchimento
+      obrigatório</p>
     <h1>Identificação da Não Conformidade</h1>
     <p>Preencha os campos abaixo com as informações da NC</p>
   </div>
