--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="row m-0">
     <div class="cabecalho text-box p-0 col-lg-7 mr-3">
-      <h1>Dados do Produto</h1>
+      <h1>Dados do Produto *</h1>
       <p>
         Identifique o produto desta NC.
         <br>
