--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -1,6 +1,6 @@
 <div class="mb-3">
   <div class="cabecalho">
-    <h1>Ponto de Rejeição</h1>
+    <h1>Ponto de Rejeição *</h1>
     <p>Descreva o problema e porque esta NC esta sendo aberta.</p>
   </div>
   <p-editor
