--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-action-plan/nc-info-action-plan.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-action-plan/nc-info-action-plan.component.html
@@ -152,7 +152,7 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="bi bi-geo"></i>
-                    Ações Corretivas
+                    Plano de Ação
                 </p>
             </div>
         </ng-template>
@@ -184,7 +184,7 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="bi bi-envelope"></i>
-                    Partes Interessadas
+                    Notificação por e-mail
                 </p>
             </div>
         </ng-template>
