--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -32,7 +32,7 @@
 <div class="row mb-0">
   <div class="d-flex col">
     <div class="cabecalho p-0 m-0">
-      <h1>Dados do Parceiro</h1>
+      <h1>Dados do Parceiro *</h1>
       <p>
         Identifique o parceiro responsável pelo produto nesta NC.
         <br>
