--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -159,7 +159,7 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="bi bi-envelope"></i>
-                    Partes Interessadas
+                    Notificação por e-mail
                 </p>
                 <button class="btn btn-dark red" (click)="goToStepById(4)">
                     <i class="bi bi-pencil mr-1"></i>
