remover icone de custos incorridos

--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -40,13 +40,13 @@
                 <td>{{ doc.author?.username }}</td>
                 <td>{{ doc.value }}</td>
                 <td>
-                    <button
+                    <!-- <button
                             pButton
                             type="button"
                             icon="bi bi-file-earmark-richtext"
                             class="p-button-secondary p-button-text"
                             (click)="visualizarDocumento(doc.id, 'pdf')"
-                    ></button>
+                    ></button> -->
                     <a
                             pButton
                             type="button"
