reabilita botão fechamento

--- a/src/app/pages/ncs/about/closing/closing.component.html
+++ b/src/app/pages/ncs/about/closing/closing.component.html
@@ -26,7 +26,7 @@
 <h5 class="text-center">Verifique com o andamento desta NC e contate os responsáveis para a realização de suas tarefas para então finalizar esta NC.</h5>
 
 <div class="text-center">
-    <button type="button" class="btn btn-dark" disabled>
+    <button type="button" class="btn btn-dark" (click)="openDialog()">
         Fechar NC
         <i class="bi bi-file-earmark-check"></i>
     </button>
