reabilita botão fechamento

--- a/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.html
+++ b/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.html
@@ -26,5 +26,5 @@
 <p-editor [style]="{ height: '200px' }" [(ngModel)]="editorValue" class="p-editor"></p-editor>
 <div class="d-flex flex-row justify-content-end button-bar mt-3">
     <button class="btn btn-outline-warning mr-4" (click)="close()">Cancelar</button>
-    <button class="btn btn-primary">Fechar NC</button>
+    <button class="btn btn-primary" (click)="save()">Fechar NC</button>
 </div>
