--- a/src/app/pages/ncs/about/closing/closing.component.html
+++ b/src/app/pages/ncs/about/closing/closing.component.html
@@ -1,33 +1,108 @@
-<div class="d-flex flex-lg-row flex-column justify-content-between">
-    <div class="d-flex">
-        <div class="cabecalho">
-            <div class="d-flex align-items-center">
-                <h1 class="mr-3">Avaliação da NC</h1>
+<div *ngIf="!aboutSrv.nc?.closing">
+    <div class="d-flex flex-lg-row flex-column justify-content-between">
+        <div class="d-flex">
+            <div class="cabecalho">
+                <div class="d-flex align-items-center">
+                    <h1 class="mr-3">Fechamento da NC</h1>
+                </div>
+                <p>
+                    Realize o fechamento desta NC.
+                </p>
             </div>
-            <p>
-                Vizualize a avaliação desta NC.
-            </p>
         </div>
     </div>
-    <div class="d-flex justify-content-end align-items-center mb-3">
+    <div class="image-box d-flex align-items-center justify-content-center mt-5">
+        <img *ngIf="!aboutSrv.nc?.sgqEvaluation" src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
+        <img *ngIf="aboutSrv.nc?.sgqEvaluation" src="../../../../../../../assets/images/closing.svg" alt="" />
 
-        <button class="btn btn-dark ml-3" disabled>
+    </div>
+
+    <div *ngIf="!aboutSrv.nc?.sgqEvaluation" class="mt-3">
+        <h2 class="text-center text-black">Ainda faltam algumas fases!</h2>
+        <h3 class="text-center text-black">Esta NC ainda não pode ser finalizada.</h3>
+        <h5 class="text-center">Verifique com o andamento desta NC e contate os responsáveis para a realização de suas tarefas para então finalizar esta NC.</h5>
+    </div>
+    <div *ngIf="aboutSrv.nc?.sgqEvaluation" class="mt-3">
+        <h2 class="text-center text-black">Esta NC pode ser finalizada!</h2>
+        <h3 class="text-center text-black">Tudo pronto para o fechamento?</h3>
+    </div>
+
+
+    <div class="text-center">
+        <button type="button" class="btn btn-dark" [disabled]="!aboutSrv.nc?.sgqEvaluation" (click)="openDialog()">
             Fechar NC
             <i class="bi bi-file-earmark-check"></i>
         </button>
     </div>
 </div>
-<div class="image-box d-flex align-items-center justify-content-center mt-5">
-    <img src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
+<div *ngIf="aboutSrv.nc?.closing">
+    <div class="d-flex flex-lg-row flex-column justify-content-between">
+        <div class="d-flex">
+            <div class="cabecalho">
+                <div class="d-flex align-items-center">
+                    <h1 class="mr-3">Fechamento da NC</h1>
+                </div>
+                <p>
+                    Realize o fechamento desta NC.
+                </p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end align-items-center mb-3">
+            <button [class]="isAllOpen ? selectedClass : unselectedClass" class="mr-2 btn-sm" (click)="isAllOpen = true">
+                <i class="bi bi-arrows-expand"></i>
+                Expandir Todos
+            </button>
+            <button [class]="isAllOpen ? unselectedClass : selectedClass" (click)="isAllOpen = false" class="btn-sm">
+                <i class="bi bi-arrows-collapse"></i>
+                Colapsar Todos
+            </button>
+        </div>
+    </div>
+    <p-accordion [multiple]="true">
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="bi bi-check2-circle"></i>
+                        Verificação da Eficácia
+                    </p>
 
-</div>
-<h2 class="text-center text-black">Ainda faltam algumas fases!</h2>
-<h3 class="text-center text-black">Esta NC ainda não pode ser finalizada.</h3>
-<h5 class="text-center">Verifique com o andamento desta NC e contate os responsáveis para a realização de suas tarefas para então finalizar esta NC.</h5>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <div class="d-flex ml-5">
+                    <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked />
+                    <div class="d-block" *ngIf="aboutSrv.nc.closing.is_satisfied">
+                        <span class="fw-bold fs-5">Sim</span>
+                        <br>
+                        <span class="fs-6">Encerrar esta NC</span>
+                    </div>
+                    <div class="d-block" *ngIf="!aboutSrv.nc.closing.is_satisfied">
+                        <span class="fw-bold fs-5">Não</span>
+                        <br>
+                        <span class="fs-6">Abrir nova RNC fazendo referência a essa</span>
+                    </div>
+                </div>
+            </ng-template>
+        </p-accordionTab>
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="bi bi-chat-right-text"></i>
+                        Comentários
+                    </p>
 
-<div class="text-center">
-    <button type="button" class="btn btn-dark" (click)="openDialog()">
-        Fechar NC
-        <i class="bi bi-file-earmark-check"></i>
-    </button>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <p-editor
+                        [ngModel]="aboutSrv.nc.closing.comment"
+                        [style]="{ height: '100%', border: '0px solid #dddddd'}" [readonly]="true">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
+            </ng-template>
+        </p-accordionTab>
+    </p-accordion>
 </div>
