--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -18,10 +18,10 @@
         <ng-template pTemplate="header">
             <tr>
                 <th>Número</th>
-                <th>Produto</th>
                 <th>Emissor</th>
                 <th>Tipo de NC</th>
                 <th>Setor Afetado</th>
+                <th>Produto</th>
                 <th>Status</th>
                 <th>Data de Fechamento</th>
                 <th></th>
@@ -30,10 +30,10 @@
         <ng-template pTemplate="body" let-nc let-i="rowIndex">
             <tr>
                 <td>{{ nc.code }}</td>
-                <td>{{ nc.product?.name }}</td>
                 <td>{{ nc.emissor.username }}</td>
                 <td>{{ nc.tipos_nc_item }}</td>
                 <td>{{ nc.tipos_local_item }}</td>
+                <td>{{ nc.product?.name || nc.product?.description }}</td>
 
                 <td>
                     <span [ngSwitch]="nc.status" >
