--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -126,7 +126,7 @@
                     <p-chip>1</p-chip>
                     <div>
                        
-                       <textarea  [(ngModel)]="propService.propSolution.first_why" pInputTextarea cols="35" rows="5" class="textarea">
+                       <textarea disabled [(ngModel)]="propService.propSolution.first_why" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
                         <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.root_cause=='cause1'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
@@ -137,7 +137,7 @@
                     </div>
                     <p-chip>2</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.propSolution.second_why" pInputTextarea cols="35" rows="5" class="textarea">
+                       <textarea disabled [(ngModel)]="propService.propSolution.second_why" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
                         <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.root_cause=='cause2'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
@@ -148,7 +148,7 @@
                     </div>
                     <p-chip>3</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.propSolution.third_why" pInputTextarea cols="35" rows="5" class="textarea">
+                       <textarea disabled [(ngModel)]="propService.propSolution.third_why" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
                         <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.root_cause=='cause3'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
@@ -161,7 +161,7 @@
                 <div class="d-flex justify-content-evenly">
                     <p-chip>4</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.propSolution.quarter_why" pInputTextarea cols="55" rows="5" class="textarea">
+                       <textarea disabled [(ngModel)]="propService.propSolution.quarter_why" pInputTextarea cols="55" rows="5" class="textarea">
                        </textarea>
                         <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.root_cause=='cause4'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
@@ -172,7 +172,7 @@
                     </div>
                     <p-chip>5</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.propSolution.fifth_why" pInputTextarea cols="55" rows="5" class="textarea">
+                       <textarea disabled [(ngModel)]="propService.propSolution.fifth_why" pInputTextarea cols="55" rows="5" class="textarea">
                        </textarea>
                         <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.root_cause=='cause5'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
