--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -138,7 +138,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <td>
         <span class="p-column-title">Data de Abertura</span>
-        {{ncListDTO.data_abertura | date: 'MM/dd/yyyy'}}
+        {{ncListDTO.data_abertura | date: 'dd/MM/yyyy'}}
       </td>
 
       <td>
