--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -4,10 +4,10 @@
             <div class="d-flex">
                 <div class="cabecalho">
                     <div class="d-flex align-items-center">
-                        <h1 class="mr-3">Análise da Não Conformidade</h1>
+                        <h1 class="mr-3">Análise da Proposta de Solução</h1>
                     </div>
                     <p>
-                        Revise ou altere os dados da análise da NC. Se tudo estiver OK, submeta a análise desta NC.
+                        Revise ou altere os dados da proposta de solução. Se tudo estiver OK, submeta a análise desta proposta de solução.
                     </p>
                 </div>
             </div>
