--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -133,6 +133,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
           <span *ngSwitchCase="'deleted'"> Deletada</span>
           <span *ngSwitchCase="'archived'"> Arquivada</span>
           <span *ngSwitchCase="'canceled'"> Cancelada</span>
+          <span *ngSwitchCase="'closed'"> Fechada</span>
         </span>
       </td>
 
