--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -43,6 +43,7 @@
                         <span *ngSwitchCase="'deleted'"> Deletada</span>
                         <span *ngSwitchCase="'archived'"> Arquivada</span>
                         <span *ngSwitchCase="'canceled'"> Cancelada</span>
+                        <span *ngSwitchCase="'closed'"> Fechada</span>
                     </span>
                 </td>
 
