--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
@@ -52,7 +52,7 @@
                     <th>Número</th>
                     <th>Parceiro</th>
                     <th>Emissor</th>
-                    <th>Estado</th>
+                    <th>Status</th>
                     <th>Data de Fechamento</th>
                     <th></th>
                 </tr>
