--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-sgq/nc-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-sgq/nc-info-sgq.component.html
@@ -16,7 +16,7 @@
                             <th>Número</th>
                             <th>Parceiro</th>
                             <th>Emissor</th>
-                            <th>Estado</th>
+                            <th>Status</th>
                             <th>Data de Fechamento</th>
                         </tr>
                     </ng-template>
