--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -50,7 +50,7 @@
                             <th>Número</th>
                             <th>Parceiro</th>
                             <th>Emissor</th>
-                            <th>Estado</th>
+                            <th>Status</th>
                             <th>Data de Fechamento</th>
                             <th></th>
                         </tr>
