--- a/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
@@ -20,7 +20,7 @@
                 Cancelar
                 <i class="pi pi-times"></i>
             </button>
-            <button type="button" class="btn btn-dark mr-2" disabled>
+            <button type="button" class="btn btn-dark mr-2" (click)="openDados()">
                 Dados da NC
                 <i class="bi bi-file-earmark-medical"></i>
             </button>
