--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -40,7 +40,7 @@
                                 <div class="col">
                                     <label>Matéria Prima</label>
                                     <p-editor
-                                        [ngModel]="'<p>'+this.aboutService.nc.proposalSolution.lackMaterials + '</p><p>' + this.aboutService.nc.proposalSolution.low_quality_materials + '</p>' + this.aboutService.nc.proposalSolution.material_description"
+                                        [ngModel]="'<p>'+this.aboutService.nc.proposalSolution.lack_materials + '</p><p>' + this.aboutService.nc.proposalSolution.low_quality_materials + '</p>' + this.aboutService.nc.proposalSolution.material_description"
                                         [style]="editorStyle" [readonly]="true">
                                         <ng-template pTemplate="header">
                                         </ng-template>
