--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -77,7 +77,7 @@
     <div class="item">
       <div class="dados-parceiro razao-social">
         <div class="d-flex">
-          <h2 class="mr-2">Razão Social</h2>
+          <h2 class="mr-2">{{returnTitle()}}</h2>
           <p-chip>
             <i class="bi bi-ticket-perforated mr-2"></i>
             {{ (aboutSrvc.nc?.customer?.code||aboutSrvc.nc?.provider?.code)||"00000000" }}
