--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -78,7 +78,7 @@
     <div class="item">
       <div class="dados-parceiro razao-social">
         <div class="d-flex">
-          <h2 class="mr-2">Razão Social</h2>
+          <h2 class="mr-2">{{returnTitle()}}</h2>
           <p-chip>
             <i class="bi bi-ticket-perforated mr-2"></i>
             {{ this.nonComplicanceService.nc.partner?.code || "00000000" }}
