--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -49,7 +49,7 @@
         <div>
           <span class="info-titulo">Emissor</span>
           <br/>
-          <span class="info-dados">{{aboutSrvc.nc?.issuer?.username||"não preenchido"}}</span>
+          <span class="info-dados">{{aboutSrvc.nc?.emissor?.username||"não preenchido"}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -57,7 +57,7 @@
         <div>
           <span class="info-titulo">Responsável</span>
           <br/>
-          <span class="info-dados">Janaína</span>
+          <span class="info-dados">{{aboutSrvc.nc?.emissor?.sector?.responsible_name||"não preenchido"}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -65,7 +65,7 @@
         <div>
           <span class="info-titulo">Departamento</span>
           <br>
-          <p class="info-dados">Rh</p>
+          <p class="info-dados">{{aboutSrvc.nc?.emissor?.sector?.name||"não preenchido"}}</p>
         </div>
       </div>
     </div>
