--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -20,8 +20,8 @@
         <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
             <label>Responsável</label>
             <p-dropdown  class="p-input input"
-                         [options]="propService.users"
-                         optionLabel="username"
+                         [options]="contacts"
+                         optionLabel="name"
                          [(ngModel)]="selectedResp"
                          placeholder="Selecione ou busque..."
             ></p-dropdown>
@@ -69,7 +69,7 @@
         <ng-template pTemplate="body" let-action>
             <tr>
                 <td>{{ action.description }}</td>
-                <td>{{ action.responsible.username }}</td>
+                <td>{{ action.responsible.name }}</td>
                 <td>{{ action.term.split("-")?.reverse()?.join("/") }}</td>
                 <td>{{ action.status }}</td>
                 <td>
