--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -1,7 +1,7 @@
 <div class="header-create-nc">
     <div class="p-0">
         <div class="d-flex">
-            <button type="button" class="btn btn-dark">
+            <button routerLink="/ncs/about/{{id}}" type="button" class="btn btn-dark">
                 <i class="pi pi-home"></i>
                 Voltar Para Nc
             </button>
