--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -7,7 +7,7 @@
 
 <div class="mt-4">
     <p-editor
-            [(ngModel)]="this.sgqServ.sgq.textArea2"
+            [(ngModel)]="this.sgqServ.sgq.text_area2"
             [style]="{ height: '25vh' }"
             [modules]="{counter: {container: '#counterRc',unit: 'character'}}"
     ></p-editor>
