--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -1,34 +1,230 @@
-<div class="d-flex flex-lg-row flex-column justify-content-between">
-    <div class="d-flex">
-        <div class="cabecalho">
-            <div class="d-flex align-items-center">
-                <h1 class="mr-3">Avaliação SGQ</h1>
+<div *ngIf="!aboutSrv.nc?.sgqEvaluation">
+    <div class="d-flex flex-lg-row flex-column justify-content-between">
+        <div class="d-flex">
+            <div class="cabecalho">
+                <div class="d-flex align-items-center">
+                    <h1 class="mr-3">Avaliação SGQ</h1>
+                </div>
+                <p>
+                    Vizualize a avaliação ou avalie esta NC.
+                </p>
             </div>
-            <p>
-                Vizualize a avaliação ou avalie esta NC.
-            </p>
         </div>
+
+    </div>
+    <div class="image-box d-flex align-items-center justify-content-center mt-5">
+        <img *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
+        <img *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" src="../../../../../../../assets/images/Illustration.svg" alt="" />
+    </div>
+    <div *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" class="mt-3">
+        <h2 class="text-center text-black">Ainda falta uma fase!</h2>
+        <h3 class="text-center text-black">Para avaliar esta NC, é necessário primeiro completar as ações do plano de ação.</h3>
+        <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
+    </div>
+    <div *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" class="mt-3">
+        <h2 class="text-center text-black">NC ainda não avaliada!</h2>
+        <h3 class="text-center text-black">A fase de avaliação deve ser completada para a exibição de resultados.</h3>
+        <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
     </div>
 
+    <div class="text-center">
+        <button type="button" class="btn btn-dark" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
+            Iniciar Avaliação
+            <i class="bi bi-file-earmark-medical"></i>
+        </button>
+    </div>
 </div>
-<div class="image-box d-flex align-items-center justify-content-center mt-5">
-    <img *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
-    <img *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" src="../../../../../../../assets/images/Illustration.svg" alt="" />
-</div>
-<div *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" class="mt-3">
-    <h2 class="text-center text-black">Ainda falta uma fase!</h2>
-    <h3 class="text-center text-black">Para avaliar esta NC, é necessário primeiro completar as ações do plano de ação.</h3>
-    <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
-</div>
-<div *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" class="mt-3">
-    <h2 class="text-center text-black">NC ainda não avaliada!</h2>
-    <h3 class="text-center text-black">A fase de avaliação deve ser completada para a exibição de resultados.</h3>
-    <h5 class="text-center">Contate o responsável caso este não seja você.</h5>
-</div>
+<div *ngIf="aboutSrv.nc?.sgqEvaluation">
+    <div class="d-flex flex-lg-row flex-column justify-content-between">
+        <div class="d-flex">
+            <div class="cabecalho">
+                <div class="d-flex align-items-center">
+                    <h1 class="mr-3">Avaliação SGQ</h1>
+                </div>
+                <p>
+                    Vizualize a avaliação ou avalie esta NC.
+                </p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end align-items-center mb-3">
+            <button
+                    [class]="isAllOpen ? selectedClass : unselectedClass"
+                    class="mr-2 btn-sm"
+                    (click)="isAllOpen = true"
+            >
+                <i class="bi bi-arrows-expand"></i>
+                Expandir Todos
+            </button>
+            <button
+                    [class]="isAllOpen ? unselectedClass : selectedClass"
+                    (click)="isAllOpen = false"
+                    class="btn-sm"
+            >
+                <i class="bi bi-arrows-collapse"></i>
+                Colapsar Todos
+            </button>
+            <button class="btn btn-dark btn ml-3">
+                Editar Avaliação
+                <i class="bi bi-pencil-square"></i>
+            </button>
+        </div>
+    </div>
+    <p-accordion [multiple]="true">
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="bi bi-link-45deg"></i>
+                        Reincidência
+                    </p>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <div class="card">
+                    <p-table [value]="aboutSrv.nc.sgqEvaluation.recurrence||[]">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Número</th>
+                                <th>Emissor</th>
+                                <th>Tipo de NC</th>
+                                <th>Setor Afetado</th>
+                                <th>Produto</th>
+                                <th>Status</th>
+                                <th>Data de Fechamento</th>
+                                <th></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-nc let-i="rowIndex">
+                            <tr>
+                            <tr>
+                                <td>{{ nc.code }}</td>
+                                <td>{{ nc.emissor?.username }}</td>
+                                <td>{{ nc.tipos_nc_item }}</td>
+                                <td>{{ nc.tipos_local_item }}</td>
+                                <td>{{ nc.product?.name || nc.product?.description }}</td>
 
-<div class="text-center">
-    <button type="button" class="btn btn-dark" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
-        Iniciar Avaliação
-        <i class="bi bi-file-earmark-medical"></i>
-    </button>
+                                <td>
+                    <span [ngSwitch]="nc.status" >
+                        <span *ngSwitchCase="'open'"> Aberta</span>
+                        <span *ngSwitchCase="'running'"> Em execução</span>
+                        <span *ngSwitchCase="'late'"> Atrasada</span>
+                        <span *ngSwitchCase="'deleted'"> Deletada</span>
+                        <span *ngSwitchCase="'archived'"> Arquivada</span>
+                        <span *ngSwitchCase="'canceled'"> Cancelada</span>
+                        <span *ngSwitchCase="'closed'"> Fechada</span>
+                    </span>
+                                </td>
+                                <td>{{ parseDate(nc.data_fechamento||"")||"00/00/0000" }}</td>
+                                <td>
+                                    <button
+                                            pButton
+                                            type="button"
+                                            icon="bi bi-info-circle"
+                                            class="p-button-secondary p-button-text"
+                                            (click)="details(nc)"
+                                    ></button>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </ng-template>
+        </p-accordionTab>
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="pi pi-compass"></i>
+                        Relato e Evidências da Solução do Problema
+                    </p>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <div class="mb-5">
+                    <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area1" [style]="editorStyle" [readonly]="true">
+                        <ng-template pTemplate="header">
+                        </ng-template>
+                    </p-editor>
+                </div>
+                <div class="mt-5 mb-3">
+                    <p-carousel
+                            [value]="aboutSrv.nc.sgqEvaluation.attachments"
+                            [numVisible]="4"
+                            [numScroll]="4"
+                            [showIndicators]="false"
+
+                    >
+                        <ng-template let-file pTemplate="item">
+                            <i class="bi bi-file-earmark fs-1"></i>
+                            <p>{{ file.name }}</p>
+                        </ng-template>
+                    </p-carousel>
+                </div>
+            </ng-template>
+        </p-accordionTab>
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="pi pi-compass"></i>
+                        Riscos e Oportunidades
+                    </p>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area2" [style]="editorStyle" [readonly]="true">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
+            </ng-template>
+        </p-accordionTab>
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="bi bi-envelope-exclamation"></i>
+                        Mudanças
+                    </p>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area3" [style]="editorStyle" [readonly]="true">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
+            </ng-template>
+        </p-accordionTab>
+        <p-accordionTab [selected]="isAllOpen">
+            <ng-template pTemplate="header">
+                <div class="d-flex justify-content-between accordion">
+                    <p>
+                        <i class="bi bi-envelope"></i>
+                        Notificação por e-mail
+                    </p>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="content">
+                <div class="card">
+                    <p-table [value]="aboutSrv.nc.contacts">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Nome</th>
+                                <th>E-mail</th>
+                                <th>Tipo de Contato</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-contact let-i="rowIndex">
+                            <tr>
+                                <td>{{ contact.name }}</td>
+                                <td>{{ contact.email }}</td>
+                                <td>{{ contact.type }}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </ng-template>
+        </p-accordionTab>
+    </p-accordion>
+
+
 </div>
