--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -30,7 +30,7 @@
         <ng-template pTemplate="body" let-nc let-i="rowIndex">
             <tr>
                 <td>{{ nc.code }}</td>
-                <td>{{ nc.emissor.username }}</td>
+                <td>{{ nc.emissor?.username }}</td>
                 <td>{{ nc.tipos_nc_item }}</td>
                 <td>{{ nc.tipos_local_item }}</td>
                 <td>{{ nc.product?.name || nc.product?.description }}</td>
